--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -14,6 +14,10 @@
     margin-bottom: 112px;
   }
 
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 0;
+  }
+
     &__logo {
     background-color: $white;
     border-radius: 50%;
